--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@angular/compiler": "^16.0.4",
     "@angular/core": "^16.0.4",
     "@angular/forms": "^16.0.4",
-    "@angular/material": "^16.0.3",
+    "@angular/material": "^14.0.2",
     "@angular/platform-browser": "^16.0.4",
     "@angular/platform-browser-dynamic": "^16.0.4",
     "@angular/router": "^16.0.4",
+    "ngx-audio-player": "^12.0.2",
     "ngx-spinner": "^16.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
